z-index fixed

--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -4,7 +4,7 @@
   border-radius: 30px 30px 0 0;
   margin-top: -197px;
   padding: 0 20px;
-  z-index: 5;
+  z-index: 1;
   &__wrapper {
     padding-top: 180px;
     max-width: $content-max-width;
