--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -30,7 +30,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 3;
+  z-index: 4;
 }
 
 .mobile-nav {
@@ -87,7 +87,7 @@
   position: absolute;
   top: 30px;
   left: 0;
-  z-index: 2;
+  z-index: 3;
   cursor: pointer;
   width: 50px;
   height: 50px;
@@ -98,7 +98,7 @@
   position: absolute;
   top: 30px;
   left: 0;
-  z-index: 1;
+  z-index: 2;
   width: 60px;
   height: 60px;
   padding: 1rem;
@@ -119,7 +119,7 @@
     &::after {
       content: "";
       position: absolute;
-      z-index: 1;
+      z-index: 2;
       top: -10px;
       width: 100%;
       height: 2px;
